--- a/Jack_AntiLarsen/CMakeLists.txt
+++ b/Jack_AntiLarsen/CMakeLists.txt
@@ -3,4 +3,10 @@ project(Jack_AntiLarsen)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(Jack_AntiLarsen main.cpp iir.cpp)
+add_executable(Jack_AntiLarsen
+        main.cpp
+        src/iir.cpp
+        include/iir.h
+        src/peaksFinder.cpp
+        include/peaksFinder.h
+        include/const.h)
