LADSPA integration and class binding

--- a/Jack_AntiLarsen/CMakeLists.txt
+++ b/Jack_AntiLarsen/CMakeLists.txt
@@ -3,10 +3,17 @@ project(Jack_AntiLarsen)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(Jack_AntiLarsen /
-        main.cpp /
-        src/iir.cpp /
-        include/iir.h /
-        src/peaksFinder.cpp /
-        include/peaksFinder.h /
-        include/const.h src/fastmath.cpp include/fastmath.h)
+add_executable(Jack_AntiLarsen
+        main.cpp
+        src/iir.cpp
+        include/iir.h
+        src/peaksFinder.cpp
+        include/peaksFinder.h
+        include/const.h
+        src/fastmath.cpp
+        include/fastmath.h
+        /usr/include/ladspa.h
+        )
+
+target_link_libraries(Jack_AntiLarsen
+        fftw3)
