--- a/Jack_AntiLarsen/CMakeLists.txt
+++ b/Jack_AntiLarsen/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.20)
+cmake_minimum_required(VERSION 3.16)
 project(Jack_AntiLarsen)
 
 set(CMAKE_CXX_STANDARD 20)
@@ -6,14 +6,15 @@ set(CMAKE_CXX_STANDARD 20)
 add_executable(Jack_AntiLarsen
         main.cpp
         src/iir.cpp
-        include/iir.h
+        src/fastmath.cpp
         src/peaksFinder.cpp
+
         include/peaksFinder.h
         include/const.h
-        src/fastmath.cpp
+        include/iir.h
         include/fastmath.h
-        /usr/include/ladspa.h
-        LADSPA.cpp include/localtools.h)
+        include/localtools.h)
 
 target_link_libraries(Jack_AntiLarsen
+        jack
         fftw3)
