--- a/Jack_AntiLarsen/CMakeLists.txt
+++ b/Jack_AntiLarsen/CMakeLists.txt
@@ -18,6 +18,6 @@ add_executable(Jack_AntiLarsen
         )
 
 target_link_libraries(Jack_AntiLarsen
-        jack
+        /usr/lib64/pipewire-0.3/jack/libjack.so.0
         fftw3
         )
