--- a/Jack_AntiLarsen/CMakeLists.txt
+++ b/Jack_AntiLarsen/CMakeLists.txt
@@ -7,17 +7,34 @@ add_executable(Jack_AntiLarsen
         main.cpp
         src/iir.cpp
         src/fastmath.cpp
-        src/peaksFinder.cpp
-        src/activeFilters.cpp
-        include/peaksFinder.h
+        src/Analyzer.cpp
+        src/DSP.cpp
+        include/Analyzer.h
         include/const.h
         include/iir.h
         include/fastmath.h
         include/localtools.h
-        include/activeFilters.h
+        include/DSP.h
+        )
+add_executable(TEST
+        test.cpp
+        src/iir.cpp
+        src/fastmath.cpp
+        src/Analyzer.cpp
+        src/DSP.cpp
+        include/Analyzer.h
+        include/const.h
+        include/iir.h
+        include/fastmath.h
+        include/localtools.h
+        include/DSP.h
         )
 
 target_link_libraries(Jack_AntiLarsen
+        /usr/lib64/pipewire-0.3/jack/libjack.so.0
+        fftw3f
+        )
+target_link_libraries(TEST
         /usr/lib64/pipewire-0.3/jack/libjack.so.0
         fftw3f
         )
