--- a/Jack_AntiLarsen/CMakeLists.txt
+++ b/Jack_AntiLarsen/CMakeLists.txt
@@ -7,26 +7,10 @@ set(CMAKE_CXX_STANDARD 20)
 find_package(SDL2 REQUIRED)
 include_directories(${SDL2_INCLUDE_DIRS})
 
-add_executable(Jack_AntiLarsen
-        main.cpp
-        src/fastmath.cpp
-        src/Analyzer.cpp
-        src/DSP.cpp
-        include/Analyzer.h
-        include/const.h
-        include/fastmath.h
-        include/localtools.h
-        include/DSP.h
-        )
-
-target_link_libraries(Jack_AntiLarsen
-        /usr/lib64/pipewire-0.3/jack/libjack.so.0
-        fftw3f
-        )
 add_executable(TEST
         test.cpp
         src/fastmath.cpp
-        src/Analyzer.cpp
+        src/analyzer.cpp
         src/DSP.cpp
         include/Analyzer.h
         include/const.h
@@ -41,9 +25,9 @@ target_link_libraries(TEST
 
 ## RTA Recipe
 add_executable(RTA
-        rta.cpp
+        main.cpp
         src/fastmath.cpp
-        src/Analyzer.cpp
+        src/analyzer.cpp
         src/DSP.cpp
 
         include/Analyzer.h
@@ -70,7 +54,7 @@ add_executable(RTA
         ##imgui/opengl3/imgui_impl_opengl3.o
         ##imgui/opengl3/imgui_impl_sdl.o
         ##imgui/opengl3/imgui_widgets.o
-        )
+        src/rta.cpp include/rta.h)
 include_directories(RTA
         imgui/libs/gl3w/GL
         imgui)
